--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/yorkie.ico">
   <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <meta name="author" content="862105636">
 
-  <title>John Doe - Business Administration</title>
+  <title>Nayeli Martinez - Business Administration</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Nayeli Martinez</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/NayeliMartinez.jpeg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Nayeli Martinez
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">I am a first generation college student at the University of California Riverside. Currently a Business Administration major with a concentration in Accounting & Auditing. My goal is to one day become a certified public accountant.<br><br>
 
-        Enter bio here<br><br>
+        At Ross Stores inc. I am an organized Retail Sales Associate experienced in handling cash, processing payments and cementing patron relationships with excellent interpersonal abilities. Proven history of carefully managing funds to reduce discrepancies. Service-oriented team member with articulate communication skills and friendly demeanor.<br><br>
 
-        Enter bio here
+        Additionally, I am Student Researcher for the MMS Research team and Spanish translator for the Coachella Valley Free Clinic. Both organizations focus on serving the medically underserved population of Inland Southern California. As a member of the MMS Research team, we study the medically underserved populations of the Inland Empire in order to better understand health disparities and aid in bridging the health gap. As a Spanish translator I help run the Coachella Valley Free Clinic. We assist by accompanying patients throughout their health assessments by maintaining accurate translations between both patient and healthcare provider. By doing so we help create trustworthy relationships between both parties. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="linkedin" href="https://linkedin.com">
+          <a target="_blank" id="linkedin" href="https://www.linkedin.com/in/nayeli-m-4904b5135">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="github" href="https://github.com">
+          <a target="_blank" id="github" href="https://github.com/nayelimartinez1">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="twitter" href="https://twitter.com">
+          <a target="_blank" id="twitter" href="https://twitter.com/heyynayeli">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="email" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="email" href="mailto:nmart062@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,47 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Retail Sales Associate</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.rossstores.com/">Ross Stores Inc.</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Improved operational efficiencies while managing customers requests, store inventory, transactions, new purchase orders and pricing needs<br> 
+              • Balanced and organized cash register by handling cash, counting change and applying discounts.
+<br>
+              • Refunded payments for returned items, processed exchanges and offered store credit to achieve customer satisfaction.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2020 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Spanish Translator Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.facebook.com/CoachellaValleyFreeClinic">Coachella Valley Free Clinic</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Assisted with patient intake (administrative tasks/customer service/consulting) and health education.<br>
+              • Accomplished through maintaining accurate communication and establishing trustworthy relationship between patients and medical provider.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">Febuary 2019 - March 2020</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Research Member</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mms.ucr.edu/">MMS Research Team</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Research team focused on the medically underserved populations of Inland Southern California.<br>
+            • Managed participant files by organizing forms, adding collected information to research database, and creating summary reports.<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2019 - Present</span>
           </div>
         </div>
 
@@ -151,34 +150,22 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
             <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div>Accounting and Auditing</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2018 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
+          <div class="resume-content">
+            <h3 class="mb-0">Bonita High School</h3>
+            <div class="subheading mb-3">Diploma</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2014 - June 2018</span>
           </div>
         </div>
 
@@ -191,7 +178,11 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/cvfc.jpg" width="500px">
+            <img src="img/mms.jpeg" width="500px">
+            <img src="img/mmsg.jpeg" width="500px"><br>
+            <img src="img/ross.png" width="500px">
+            <img src="img/spanish.png" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +190,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Nayeli Martinez</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
